fix: pinned items vertical spacing

--- a/packages/components/bolt-band/src/band.scss
+++ b/packages/components/bolt-band/src/band.scss
@@ -116,16 +116,16 @@ $bolt-band-sizes: (
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-top: bolt-v-spacing(small) / 2;
+  margin-top: bolt-v-spacing(small);
   margin-right: bolt-spacing(small) * -1 / 2;
-  margin-bottom: bolt-v-spacing(small) / 2;
+  margin-bottom: bolt-v-spacing(small);
   margin-left: bolt-spacing(small) * -1 / 2;
 }
 
 .c-bolt-band__pinned-item {
-  padding-top: bolt-v-spacing(small) / 2;
+  padding-top: bolt-v-spacing(small);
   padding-right: bolt-spacing(small) / 2;
-  padding-bottom: bolt-v-spacing(small) / 2;
+  padding-bottom: bolt-v-spacing(small);
   padding-left: bolt-spacing(small) / 2;
   line-height: 1;
 
